--- a/style.css
+++ b/style.css
@@ -1,158 +1,158 @@
 * {
-    font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 body {
-    text-align: center;
+  text-align: center;
 }
 
 main {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .loadingscreen {
-    position: absolute;
-    left: 50%;
-    margin-left: -38px;
-    top: 40%;
-    margin-top: -50px;
+  position: absolute;
+  left: 50%;
+  margin-left: -38px;
+  top: 40%;
+  margin-top: -50px;
 }
 
 .hidden {
-    display: none;
+  display: none;
 }
 
 .maintitle {
-    font-family: 'Press Start 2P', cursive;
+  font-family: "Press Start 2P", cursive;
 }
 
 .movietable-container {
-    width: 60%;
-    margin: 0 auto;
+  width: 60%;
+  margin: 0 auto;
 }
 
 .pagination {
-    display: flex;
-    justify-content: center;
-    list-style-type: none;
-    padding: 0;
-    margin: 10px auto;
+  display: flex;
+  justify-content: center;
+  list-style-type: none;
+  padding: 0;
+  margin: 10px auto;
 }
 
 .pagination-item-label {
-    cursor: pointer;
-    list-style: none;
-    padding: 10px;
-    width: 50px;
+  cursor: pointer;
+  list-style: none;
+  padding: 10px;
+  width: 50px;
 }
 
 .pagination-item-li {
-    width: 50px;
-    margin: 10px 5px;
+  width: 50px;
+  margin: 10px 5px;
 }
 
 .pagination-item-option {
-    appearance: none;
+  appearance: none;
 }
 
-.pagination input[type="radio"]:checked+label {
-    background-color: #eee;
+.pagination input[type="radio"]:checked + label {
+  background-color: #eee;
 }
 
 .pagination-item-label:hover {
-    background-color: #eee;
+  background-color: #eee;
 }
 
 .movie-table {
-    width: 100%;
+  width: 100%;
 }
 
 .episode-title {
-    width: 60%;
+  width: 60%;
 }
 
 .episode-title a {
-    color: black;
+  color: black;
 }
 
 .movie-detailscontainer input {
-    width: 80%;
+  width: 80%;
 }
 
 .movie-detailscontainer textarea {
-    resize: none;
-    font-size: inherit;
-    font-family: inherit;
-    width: 80%;
+  resize: none;
+  font-size: inherit;
+  font-family: inherit;
+  width: 80%;
 }
 
 .movie-detailscontainer textarea:disabled {
-    border: none
+  border: none;
 }
 
 .textarea-crawl {
-    height: 200px;
-    color: black;
+  height: 200px;
+  color: black;
 }
 
 .textarea-producers {
-    max-height: 200px;
-    color: black
+  max-height: 200px;
+  color: black;
 }
 
 .movie-detailscontainer input:disabled {
-    border: none;
-    font-family: inherit;
-    font-size: inherit;
-    color: black;
+  border: none;
+  font-family: inherit;
+  font-size: inherit;
+  color: black;
 }
 
 .movie-detailscontainer input {
-    font-family: inherit;
-    font-size: inherit;
-    color: black;
+  font-family: inherit;
+  font-size: inherit;
+  color: black;
 }
 
 .movie-table,
 .movie-table td,
 .movie-table tr {
-    margin: 0 auto;
-    border-collapse: collapse;
-    border: 1px solid black;
-    padding: 5px;
-    cursor: pointer;
+  margin: 0 auto;
+  border-collapse: collapse;
+  border: 1px solid black;
+  padding: 5px;
+  cursor: pointer;
 }
 
 .characters__character h4,
 .planets__planet h4 {
-    line-height: 1;
-    margin: 5px 0px;
+  line-height: 1;
+  margin: 5px 0px;
 }
 
 .movie-detailssidebar-characters-header,
 .movie-detailssidebar-planets-header {
-    background-color: #eee;
-    margin: 0px;
-    border-bottom: 1px solid black;
+  background-color: #eee;
+  margin: 0px;
+  border-bottom: 1px solid black;
 }
 
 .movie-detailssidebar-planets-header {
-    border-top: 1px solid black;
+  border-top: 1px solid black;
 }
 
 .movie-detailscontainer {
-    border: 1px solid black;
-    min-height: 740px;
+  border: 1px solid black;
+  min-height: 740px;
 }
 
 .movie-detailsform-toggler {
-    border: none;
-    border-left: 1px solid black;
-    border-bottom: 1px solid black;
-    background-color: #eee;
-    width: 30px;
-    height: 30px;
+  border: none;
+  border-left: 1px solid black;
+  border-bottom: 1px solid black;
+  background-color: #eee;
+  width: 30px;
+  height: 30px;
 }
 
 .movie-detailsfrom-backlink,
@@ -162,12 +162,12 @@ main {
 .movie-detailsform-submitbutton,
 .deletion-modal-deletelink,
 .deletion-modal-notdeletelink {
-    cursor: pointer;
-    text-decoration: none;
-    background-color: #eee;
-    color: black;
-    padding: 10px;
-    margin-bottom: 5px;
+  cursor: pointer;
+  text-decoration: none;
+  background-color: #eee;
+  color: black;
+  padding: 10px;
+  margin-bottom: 5px;
 }
 
 .movie-detailsform-deletelink,
@@ -175,114 +175,197 @@ main {
 .deletion-modal-deletelink,
 .deletion-modal-notdeletelink,
 .movie-detailsform-editlink {
-    border: none;
-    font-size: inherit;
+  border: none;
+  font-size: inherit;
 }
 
 .deletion-modal-deletelink,
 .deletion-modal-notdeletelink {
-    line-height: 1;
+  line-height: 1;
 }
 
 .deletion-modal-buttons {
-    display: flex;
-    justify-content: space-around;
+  display: flex;
+  justify-content: space-around;
 }
 
 .movie-detailsform-buttons {
-    margin-top: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 }
 
 .movie-detailssidebar {
-    overflow-y: auto;
-    width: 200px;
-    border: 1px solid black;
-    border-left: none;
-    max-height: 797.625px;
+  overflow-y: auto;
+  width: 200px;
+  border: 1px solid black;
+  border-left: none;
+  max-height: 797.625px;
 }
 
 .sort-button {
-    cursor: pointer;
-    padding: 15px;
-    border: none;
-    background-color: #eee;
-    font-size: inherit;
+  cursor: pointer;
+  padding: 15px;
+  border: none;
+  background-color: #eee;
+  font-size: inherit;
 }
 
 .sort-button:hover {
-    background-color: rgb(226, 226, 226);
+  background-color: rgb(226, 226, 226);
 }
 
 .movie-detailsform {
-    text-align: right;
-    width: 600px;
-    margin: 0 auto;
+  text-align: right;
+  width: 600px;
+  margin: 0 auto;
 }
 
 .movie-detailsform-data {
-    text-align: center;
+  text-align: center;
 }
 
 .movie-detailsform-data label {
-    display: block;
-    font-weight: bold;
-    margin: 10px 0;
+  display: block;
+  font-weight: bold;
+  margin: 10px 0;
 }
 
 .sorting-buttons-container {
-    width: fit-content;
-    margin: 5px auto;
+  width: fit-content;
+  margin: 5px auto;
 }
 
 .character__button_expand,
 .planet__button_expand {
-    background-color: white;
-    border: none;
-    cursor: pointer;
-    width: 100%;
+  background-color: white;
+  border: none;
+  cursor: pointer;
+  width: 100%;
 }
 
 .character__button_expand:hover,
 .planet__button_expand:hover {
-    background-color: #eee;
+  background-color: #eee;
 }
 
 .characters__character div,
 .planets__planet div {
-    border-bottom: 1px solid black;
-    font-size: 14px;
+  border-bottom: 1px solid black;
+  font-size: 14px;
 }
 
 .characters__character,
 .planets__planet {
-    padding: 5px;
+  padding: 5px;
 }
 
 .searchform {
-    border: 1px solid black;
-    width: fit-content;
-    margin: 5px auto;
+  border: 1px solid black;
+  width: fit-content;
+  margin: 5px auto;
 }
 
 .searchform-input,
 .searchform-button {
-    padding: 3px;
-    border: none
+  padding: 3px;
+  border: none;
 }
 
 .deletion-modal {
-    background: white;
-    box-sizing: border-box;
-    border: 1px solid black;
-    width: 300px;
-    height: 300px;
-    position: absolute;
-    left: 50%;
-    margin-left: -150px;
-    top: 50%;
-    margin-top: -150px;
-    padding: 20px;
+  background: white;
+  box-sizing: border-box;
+  border: 1px solid black;
+  width: 300px;
+  height: 300px;
+  position: absolute;
+  left: 50%;
+  margin-left: -150px;
+  top: 50%;
+  margin-top: -150px;
+  padding: 20px;
+}
+
+.about-button-container {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.about-modal-container {
+  text-align: left;
+  position: absolute;
+  width: 700px;
+  height: 400px;
+  background-color: white;
+  top: 25%;
+  left: 25%;
+  border-radius: 15px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  z-index: 2;
+  padding: 15px;
+}
+
+.about-modal-shadow {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  transition-property: all;
+  transition-duration: 0.2s;
+}
+
+.button-container {
+  margin-top: 25px;
+}
+
+.button-container button {
+  cursor: pointer;
+  text-decoration: none;
+  background-color: #eee;
+  color: black;
+  padding: 10px;
+  margin-bottom: 5px;
+  border: none;
+}
+
+.main-window-about-button {
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 414px) {
+  .root {
+    align-content: stretch;
+    width: 100%;
+  }
+  .movietable-container {
+    width: 100%;
+  }
+  .table-display-container {
+    width: 100%;
+  }
+  .movie-detailscontainer {
+    width: 100vw;
+  }
+  .movie-detailsform {
+    width: auto;
+  }
+  .about-modal-container {
+    width: 87%;
+    height: 400px;
+    top: 25%;
+    left: 3%;
+  }
+  .about-modal-shadow {
+      width: 100%;
+      height: 135%;
+      bottom: 0;
+  }
 }
